--- a/src/app/user/user-root/user-root.component.html
+++ b/src/app/user/user-root/user-root.component.html
@@ -1,3 +1,5 @@
 <h1>USER ROOT</h1>
-<app-user-create></app-user-create>
-<app-user-list></app-user-list>
+<mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile> <app-user-list></app-user-list></mat-grid-tile>
+  <mat-grid-tile><app-user-create></app-user-create></mat-grid-tile>
+</mat-grid-list>
