--- a/src/app/user/user-root/user-root.component.html
+++ b/src/app/user/user-root/user-root.component.html
@@ -1,5 +1,8 @@
 <h1>USER ROOT</h1>
-<mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile> <app-user-list></app-user-list></mat-grid-tile>
-  <mat-grid-tile><app-user-create></app-user-create></mat-grid-tile>
-</mat-grid-list>
+<button mat-raised-button color="primary">Add User</button>
+<!-- <mat-grid-list cols="4" rowHeight="1:1">
+  <mat-grid-tile colspan="3"> <app-user-list></app-user-list></mat-grid-tile>
+  <mat-grid-tile colspan="1"><app-user-create></app-user-create></mat-grid-tile>
+</mat-grid-list> -->
+<app-user-list></app-user-list>
+<app-user-create></app-user-create>
