--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,5 +1,8 @@
 <mat-card>
   <!-- <div *ngFor="let user of users; let i = index"> -->
+  <button mat-raised-button color="primary" (click)="createNewUser()">
+    Add User
+  </button>
   <table class="table">
     <thead>
       <tr>
