--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -25,8 +25,11 @@
       Cancel
     </button> -->
 
-    <button mat-raised-button color="primary">
+    <button mat-raised-button color="warn">
       Delete
     </button>
   </form>
+  <button mat-raised-button color="secondary" (click)="hideEditComponent()">
+    Close
+  </button>
 </mat-card>
