--- a/src/app/user/user-root/user-root.component.html
+++ b/src/app/user/user-root/user-root.component.html
@@ -5,4 +5,4 @@
   <mat-grid-tile colspan="1"><app-user-create></app-user-create></mat-grid-tile>
 </mat-grid-list> -->
 <app-user-list></app-user-list>
-<app-user-create></app-user-create>
+<app-user-create *ngIf="displayEditComponent"></app-user-create>
