--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -30,7 +30,9 @@
             >visibility</mat-icon
           >
           <mat-icon id="editButton" color="primary">edit</mat-icon>
-          <mat-icon id="deleteButton" color="warn">delete</mat-icon>
+          <mat-icon id="deleteButton" color="warn" (click)="deleteUser(user)"
+            >delete</mat-icon
+          >
         </td>
       </tr>
     </tbody>
