--- a/src/app/user/user-root/user-root.component.html
+++ b/src/app/user/user-root/user-root.component.html
@@ -1,8 +1,4 @@
-<h1>USER ROOT</h1>
+<h1 mat-display-4>USER DASHBOARD APP</h1>
 
-<!-- <mat-grid-list cols="4" rowHeight="1:1">
-  <mat-grid-tile colspan="3"> <app-user-list></app-user-list></mat-grid-tile>
-  <mat-grid-tile colspan="1"><app-user-create></app-user-create></mat-grid-tile>
-</mat-grid-list> -->
 <app-user-list></app-user-list>
 <app-user-create *ngIf="displayEditComponent"></app-user-create>
