Added delete actions using effects

--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -35,7 +35,7 @@
             >visibility</mat-icon
           >
           <mat-icon id="editButton" color="primary">edit</mat-icon>
-          <mat-icon id="deleteButton" color="warn" (click)="deleteUser(user)"
+          <mat-icon id="deleteButton" color="warn" (click)="deleteUser(user.id)"
             >delete</mat-icon
           >
         </td>
