--- a/src/app/user/user-deleted-modal/user-deleted-modal.component.html
+++ b/src/app/user/user-deleted-modal/user-deleted-modal.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>
-  Are you sure you want to delete user: {{ data.name }} ?
+  Are you sure you want to delete?
 </h2>
 
 <mat-dialog-actions>
